src/test/deca/context/invalid/resultats/test_environment2-cont.res
./src/test/deca/context/invalid/test_environment2.deca:37:12: The method getS is not defined for the class C
